--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,12 @@ test.testLogging {
     exceptionFormat = "full";
     events "failed", "passed", "skipped", "standardOut", "standardError"
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        csv.enabled = false
+        html.enabled = true
+        // html.destination "${buildDir}/reports/coverage"
+        // xml.destination "${buildDir}/reports/coverage"
+    }
